# crystalframer-encoder

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_ja.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
crystalframer_encoder/: __init__.py  cli.py  encoder.py
crystalframer_encoder/configs/: __init__.py  model_configs.py
crystalframer_encoder/models/: __init__.py  latticeformer.py  pooling.py
crystalframer_encoder/utils/: __init__.py  data_utils.py  download.py  params.py
crystalframer_weight/formation_energy/: hparams.yaml
crystalframer_weight/opt_bandgap/: hparams.yaml
tests/: __init__.py
